day 1 done, push on git day

--- a/day2/notebooks/Day2-Morning_git.ipynb
+++ b/day2/notebooks/Day2-Morning_git.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "Even not considering computational work, just consider writing a report/essay/article using a word prcoessor - working alone but also collabortively with rounds of edits:\n",
     "\n",
-    "![phd101212s.gif](phd101212s.gif)\n",
+    "![phd101212s.gif](../files/phd101212s.gif)\n",
     "\n",
     "credit - phdcomics\n",
     "\n",
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![git_2x.png](git_2x.png)\n",
+    "![git_2x.png](../files/git_2x.png)\n",
     "\n",
     "Credit - xkcd"
    ]
@@ -146,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To create an SSH key for GitHub use, follow these steps:\n",
+    "To create an SSH key for GitHub use, follow these steps ON YOUR LOCAL COMPUTER (not on the server/VSCode):\n",
     "\n",
     "1. Open a terminal or command prompt.\n",
     "2. Generate a new SSH key by running the following command:\n",
@@ -161,7 +161,7 @@
     "\n",
     "5. Once the key is generated, you can view the public key by running the following command:\n",
     "```bash\n",
-    "cat ~/.ssh/id_rsa.pub\n",
+    "more ~/.ssh/id_rsa.pub\n",
     "```\n",
     "\n",
     "6. Copy the entire contents of the public key that is displayed in the terminal to the clipboard (e.g. Ctrl-C or Apple-C).\n",
@@ -174,7 +174,9 @@
     "\n",
     "10. Click \"Add SSH key\" to save the key to your GitHub account.\n",
     "\n",
-    "Now you have successfully created an SSH key for GitHub use. You can use this key to securely authenticate with GitHub when pushing or pulling repositories."
+    "Now you have successfully created an SSH key for GitHub use. You can use this key to securely authenticate with GitHub when pushing or pulling repositories.\n",
+    "\n",
+    "(Optional): You can also use this key instead of passwords to authenticate to the server.  To do this, you will need to copy the public key to the server's `~/.ssh/authorized_keys` file.  This is a bit more advanced, but is a good practice for security."
    ]
   },
   {
@@ -233,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "v"
+    "## Configuring Git Enviornment"
    ]
   },
   {
@@ -276,35 +278,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-"
+    "## Using git from VSCode"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- conflicts\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Using git from VSCode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Jokes: https://www.explainxkcd.com/wiki/index.php/1597:_Git\n"
+    "Git integration is a key feature of VSCode, providing seamless version control capabilities within the editor itself. With Git integrated directly into VSCode, developers can easily manage their code repositories, track changes, collaborate with others, and revert to previous versions if needed.\n",
+    "\n",
+    "One example of where Git integration can be found in VSCode is the Source Control view. This view allows you to see the status of your Git repository, including any modified, added, or deleted files. You can also view the commit history and branch information.\n",
+    "\n",
+    "![screenshot of source control view](../files/vscode_sourcecontrol.png)\n",
+    "\n",
+    "To access the Source Control view in VSCode, you can use the shortcut `Ctrl + Shift + G` or click on the Git icon in the left sidebar. Once in the Source Control view, you can see a list of changed files and their status. You can stage changes, commit them with a message, and push them to a remote repository.\n",
+    "\n",
+    "Additionally, VSCode provides a range of Git-related commands and features to streamline your workflow. For example, you can use the \"Git: Clone\" command to clone a remote repository directly from within VSCode. You can also use the \"Git: Pull\" command to fetch the latest changes from a remote repository and merge them into your local branch.\n",
+    "\n",
+    "In summary, Git integration in VSCode empowers developers to effectively manage their code repositories, collaborate with others, and maintain a comprehensive version control history, all within the familiar and powerful VSCode environment."
    ]
   }
  ],
