updated day 1 and day2

--- a/day1/notebooks/Day1.1_Morning_Unix_I.ipynb
+++ b/day1/notebooks/Day1.1_Morning_Unix_I.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Note: this is a static notebook (ie. not interactive). All exercises and commands in this session will be performed directly in a terminal window.  To launch a new terminal, click on `File>New>Terminal`._"
+    "_Note: this is a static notebook (ie. not interactive). All exercises and commands in this session will be performed directly in a terminal window.  To launch a new terminal, click on `Terminal>New`._"
    ]
   },
   {
