--- a/day1/notebooks/Day1.2_Afternoon_Unix_and_Bash.ipynb
+++ b/day1/notebooks/Day1.2_Afternoon_Unix_and_Bash.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Note: this is a static notebook (ie. not interactive). All exercises and commands in this session will be performed directly in a terminal window.  To launch a new terminal, click on `File>New>Terminal`._"
+    "_Note: this is a static notebook (ie. not interactive). All exercises and commands in this session will be performed directly in a terminal window.  To launch a new terminal, click on `Terminal>New`._"
    ]
   },
   {
@@ -339,6 +339,9 @@
    "source": [
     "Exercise:\n",
     "\n",
+    "FIX THIS EXERCISE FOR NEXT YEAR!!\n",
+    "\n",
+    "\n",
     "Create a bash script that takes two arguments: a string, and an integer. The output of the script should be to repeat the input string as many times as indicated by the second argument (integer)."
    ]
   },
@@ -388,6 +391,9 @@
    "source": [
     "## Reading file(s)/lines\n",
     "When you are working on bash scripts, sometimes you may need to read a file line by line.\n",
+    "\n",
+    "THEY DON'T HAVE AUTHORS.TXT FILE YET\n",
+    "\n",
     "\n",
     "```\n",
     "#!/bin/bash\n",
@@ -440,7 +446,7 @@
     "%%bash\n",
     "\n",
     "# just doing the first 10 lines by piping the output to head\n",
-    "cut -f1 data/hg38genes.txt | head"
+    "cut -f1 knownGene.txt | head"
    ]
   },
   {
