--- a/day2/notebooks/Day2-Morning_git.ipynb
+++ b/day2/notebooks/Day2-Morning_git.ipynb
@@ -297,6 +297,65 @@
     "\n",
     "In summary, Git integration in VSCode empowers developers to effectively manage their code repositories, collaborate with others, and maintain a comprehensive version control history, all within the familiar and powerful VSCode environment."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CoPilot and ChatGPT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GitHub Copilot is a LLM coding assistant developed by GitHub and OpenAI. It is designed to assist developers by generating code suggestions and completing code snippets in real-time. Copilot is trained on a vast amount of publicly available code, making it capable of providing context-aware code suggestions based on the code you are currently working on.\n",
+    "\n",
+    "It's especially useful if you _know what you want to do, algorithmically or otherwise, but don't know the specific \"syntax\" or \"function\" to use in a programming lanugage.  So if you learn python but don't know R, you can use copilot to help you write R code.\n",
+    "\n",
+    "One of the main advantages of Copilot is its ability to save time and increase productivity. It can quickly generate boilerplate code, complete function signatures, and suggest relevant code snippets based on the task at hand. This can significantly speed up the development process, especially for repetitive or complex coding tasks.\n",
+    "\n",
+    "However, it is important to note that Copilot makes a ton of mistakes. It can generate code that's not what you really intend, or code that doesn't even work.  If anything, it requires more understanding and more careful checking of what the steps are doing than not. It's a tool - basically advanced googling for code pieces. It's not a replacement for understanding what you are doing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Let's try to sign up:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your educational github account - when approved - should give you free copilot access while you are a student.  Meanwhile, let's sign up for a trial:\n",
+    "\n",
+    "To get a free Copilot trial on GitHub, follow these steps:\n",
+    "\n",
+    "1. Open your web browser and navigate to the GitHub website (github.com).\n",
+    "2. Once you are logged in, go to the Copilot page by visiting the following URL: [https://copilot.github.com/](https://copilot.github.com/)\n",
+    "3. On the Copilot page, you will see a button that says \"Get Copilot for free\". Click on this button to start the trial process.\n",
+    "4. You will be prompted to enter your email address to receive an invitation to the Copilot trial. Enter your email address and click \"Request access\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To install the GitHub Copilot extension in Visual Studio Code, follow these steps:\n",
+    "\n",
+    "1. Click on the Extensions icon in the left sidebar (or press `Ctrl+Shift+X`).\n",
+    "2. In the search bar, type \"GitHub Copilot\" and press Enter.\n",
+    "3. The GitHub Copilot extension should appear in the search results. Click on it.\n",
+    "4. On the extension page, click the \"Install\" button to begin the installation process.\n",
+    "5. Once the installation is complete, you will see a \"Reload\" button. Click on it to reload Visual Studio Code.\n",
+    "6. After the reload, the GitHub Copilot extension will be ready to use.\n",
+    "\n",
+    "Now you have successfully installed the GitHub Copilot extension in Visual Studio Code. You can start using it to assist you with code suggestions and completions while you work.\n",
+    "\n",
+    "It'll do tab completion/autocomplete for you, or you can you ctrl/appl-I to give it a prompt for what you want."
+   ]
   }
  ],
  "metadata": {
