ready for day 2

--- a/day2/notebooks/Day2-Morning_git.ipynb
+++ b/day2/notebooks/Day2-Morning_git.ipynb
@@ -302,6 +302,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Pull in the Bootcamp Repo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To clone the `timplab/bcmb_bootcamp` repository using VSCode, follow these steps:\n",
+    "\n",
+    "1. Click on the \"Source Control\" icon in the left sidebar (it looks like a branch with a magnifying glass).\n",
+    "2. In the Source Control view, click on the \"Clone Repository\" button.\n",
+    "3. Enter the URL of the `timplab/bcmb_bootcamp` repository: `https://github.com/timplab/bcmb_bootcamp.git`.\n",
+    "4. Choose a local directory where you want to clone the repository.\n",
+    "5. Click \"Clone\" to start the cloning process.\n",
+    "6. Once the cloning is complete, you will see the `bcmb_bootcamp` repository listed in the Source Control view.\n",
+    "7. You can now navigate through the repository, view files, make changes, and commit them using the Git integration in VSCode.\n",
+    "\n",
+    "By following these steps, you will be able to clone the `timplab/bcmb_bootcamp` repository using VSCode and start working with the code and documentation provided in the repository.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## CoPilot and ChatGPT"
    ]
   },
