--- a/day2/notebooks/Day2-Morning_git.ipynb
+++ b/day2/notebooks/Day2-Morning_git.ipynb
@@ -326,6 +326,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "But then - you don't want to edit on the \"main\" branch, but on your own personal branch.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make your own branch of the repository and merge new changes from the main branch in VSCode, follow these instructions:\n",
+    "\n",
+    "1. Open the repository in VSCode.\n",
+    "2. Click on the \"Source Control\" icon in the left sidebar (it looks like a branch with a magnifying glass).\n",
+    "3. In the Source Control view, click on the branch name (usually \"main\") to open the branch dropdown menu.\n",
+    "4. Click on the \"+\" icon next to the branch dropdown menu to create a new branch.\n",
+    "5. Enter a descriptive name for your branch and press Enter to create it.\n",
+    "6. VSCode will automatically switch to your newly created branch.\n",
+    "7. Make the desired changes to the files in your branch.\n",
+    "8. Once you have made your changes, save the files.\n",
+    "9. In the Source Control view, you will see the changed files listed under \"Changes\".\n",
+    "10. Click on the checkbox next to each file you want to include in the commit.\n",
+    "11. Enter a commit message in the text box at the top of the Source Control view.\n",
+    "12. Click on the checkmark icon to commit your changes.\n",
+    "\n",
+    "Pause here - I'll make some edits when everyone is caught up, then you can try to merge them:\n",
+    "1. To merge new changes from the main branch into your branch, switch back to the main branch by selecting it from the branch dropdown menu.\n",
+    "2. Click on the ellipsis (...) icon in the Source Control view and select \"Pull\".\n",
+    "3. VSCode will fetch the latest changes from the remote repository and merge them into your main branch.\n",
+    "4. Switch back to your branch by selecting it from the branch dropdown menu.\n",
+    "5. Click on the ellipsis (...) icon in the Source Control view and select \"Merge Branch\".\n",
+    "6. Select the main branch as the branch to merge from.\n",
+    "7. VSCode will merge the new changes from the main branch into your branch.\n",
+    "8. Resolve any merge conflicts, if necessary.\n",
+    "9. Once the merge is complete, you can continue working on your branch and repeat the process of committing and pushing your changes.\n",
+    "\n",
+    "By following these instructions, you will be able to create your own branch of the repository, make changes, and merge new changes from the main branch in VSCode."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## CoPilot and ChatGPT"
    ]
   },
