--- a/day2/notebooks/Day2-Morning_git.ipynb
+++ b/day2/notebooks/Day2-Morning_git.ipynb
@@ -426,6 +426,43 @@
     "\n",
     "It'll do tab completion/autocomplete for you, or you can you ctrl/appl-I to give it a prompt for what you want."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!/bin/bash \n",
+    "\n",
+    "for i in {1..20}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
