--- a/day2/assignments/Day2-Homework_Python.ipynb
+++ b/day2/assignments/Day2-Homework_Python.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Day 2 - Python Lunch Exercises"
+    "# Day 2 - Python Homework Exercises"
    ]
   },
   {
